Agregando el css

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,5 +1,9 @@
-<ion-view view-title="Playlists">
+<ion-view view-title="Shabbat Coffee">
   <ion-content>
-	<h1>About</h1>
+  	<div class="container">
+  		<img src="img/historia.jpg" class="full-image" >
+		<p>El sabor, aroma y cuerpo del café que se ofrece en las cafeterías, tiene la personalidad de las principales regiones cafetaleras de México, además que proviene de caficultores que viven en armonía con el medio ambiente y con prácticas de responsabilidad social, debidamente certificadas. Los productos principales a base de café, verduras, frutas y especias, son orgánicos. Se cuida cada detalle de la preparación asegurando que los valores nutricionales estén dentro de los rangos saludables y que la elaboración se haga garantizando la inocuidad de los alimentos.</p>
+		<img src="img/coffee.jpg" class="full-image">
+	</div>
   </ion-content>
 </ion-view>
