--- a/www/templates/cafe.html
+++ b/www/templates/cafe.html
@@ -2,6 +2,10 @@
   <ion-content>
 <div class="list card">
 
+  <div class="item item-divider">
+    <span>Cafe 1 </span>
+    <p>Cafeinomano</p>
+  </div> 
   <div class="item item-body">
     <img class="full-image" src="img/coffee.jpg">
       <p>
@@ -11,6 +15,10 @@
       </p>
   </div>
 
+  <div class="item item-divider">
+    <span>Cafe 2 </span>
+    <p>Cafeinomano</p>
+  </div> 
   <div class="item item-body">
     <img class="full-image" src="img/coffee.jpg">
       <p>
@@ -19,6 +27,11 @@
         consists of tabs, icons aligned left, within the card-footer.
       </p>
   </div>
+
+  <div class="item item-divider">
+    <span>Cafe 3 </span>
+    <p>Cafeinomano</p>
+  </div>   
   <div class="item item-body">
     <img class="full-image" src="img/coffee.jpg">
       <p>
@@ -27,6 +40,11 @@
         consists of tabs, icons aligned left, within the card-footer.
       </p>
   </div>
+
+  <div class="item item-divider">
+    <span>Cafe 4 </span>
+    <p>Cafeinomano</p>
+  </div>   
   <div class="item item-body">
     <img class="full-image" src="img/coffee.jpg">
       <p>
