--- a/www/templates/postres.html
+++ b/www/templates/postres.html
@@ -1,7 +1,23 @@
 <ion-view view-title="postres">
   <ion-content>
 <div class="list card">
+  <div class="item item-divider">
+    <span>postre 1 </span>
+    <p>postre por exelencia</p>
+  </div>
+  <div class="item item-body">
+    <img class="full-image" src="img/postre.jpg">
+      <p>
+        This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
+        the content is from a card-body consisting of an image and paragraph text. The footer
+        consists of tabs, icons aligned left, within the card-footer.
+      </p>
+  </div>
 
+  <div class="item item-divider">
+    <span>postre 1 </span>
+    <p>postre por exelencia</p>
+  </div>
   <div class="item item-body">
     <img class="full-image" src="img/postre.jpg">
       <p>
@@ -11,6 +27,10 @@
       </p>
   </div>
 
+  <div class="item item-divider">
+    <span>postre 1 </span>
+    <p>postre por exelencia</p>
+  </div>  
   <div class="item item-body">
     <img class="full-image" src="img/postre.jpg">
       <p>
@@ -19,14 +39,11 @@
         consists of tabs, icons aligned left, within the card-footer.
       </p>
   </div>
-  <div class="item item-body">
-    <img class="full-image" src="img/postre.jpg">
-      <p>
-        This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
-        the content is from a card-body consisting of an image and paragraph text. The footer
-        consists of tabs, icons aligned left, within the card-footer.
-      </p>
-  </div>
+
+  <div class="item item-divider">
+    <span>postre 1 </span>
+    <p>postre por exelencia</p>
+  </div>  
   <div class="item item-body">
     <img class="full-image" src="img/postre.jpg">
       <p>
