--- a/www/templates/promociones.html
+++ b/www/templates/promociones.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Playlist">
-  <ion-content>
-    <h1>Promociones</h1>
-  </ion-content>
+<ion-view view-title="Galeria de Promociones">
+	<ion-content ng-controller="gallery">
+		<ion-gallery ion-gallery-items="items" ion-gallery-row="2"></ion-gallery>
+	</ion-content>
 </ion-view>
