--- a/www/templates/comida.html
+++ b/www/templates/comida.html
@@ -2,6 +2,10 @@
   <ion-content>
 <div class="list card">
 
+  <div class="item item-divider">
+    <span>Comida 1 </span>
+    <p>Comida por exelencia</p>
+  </div>
   <div class="item item-body">
     <img class="full-image" src="img/comida.jpg">
       <p>
@@ -11,13 +15,9 @@
       </p>
   </div>
 
-  <div class="item item-body">
-    <img class="full-image" src="img/comida.jpg">
-      <p>
-        This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
-        the content is from a card-body consisting of an image and paragraph text. The footer
-        consists of tabs, icons aligned left, within the card-footer.
-      </p>
+  <div class="item item-divider">
+    <span>Comida 1 </span>
+    <p>Comida por exelencia</p>
   </div>
   <div class="item item-body">
     <img class="full-image" src="img/comida.jpg">
@@ -27,6 +27,24 @@
         consists of tabs, icons aligned left, within the card-footer.
       </p>
   </div>
+
+  <div class="item item-divider">
+    <span>Comida 1 </span>
+    <p>Comida por exelencia</p>
+  </div>  
+  <div class="item item-body">
+    <img class="full-image" src="img/comida.jpg">
+      <p>
+        This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
+        the content is from a card-body consisting of an image and paragraph text. The footer
+        consists of tabs, icons aligned left, within the card-footer.
+      </p>
+  </div>
+
+  <div class="item item-divider">
+    <span>Comida 1 </span>
+    <p>Comida por exelencia</p>
+  </div>  
   <div class="item item-body">
     <img class="full-image" src="img/comida.jpg">
       <p>
