--- a/www/templates/principal.html
+++ b/www/templates/principal.html
@@ -13,24 +13,20 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-green">
+    <ion-header-bar class="bar-stable">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
-    <ion-content>
+    <ion-content class="custom">
       <ion-list>
         <ion-item menu-close ng-click="login()">
           Login
-        </ion-item>
-        <ion-item menu-close href="#/app/about">
-          <i class="icon ion-information-circled"></i>
-          Sobre Shabbat Coffee
         </ion-item>
         <ion-item menu-close href="#/app/cafe">
           <i class="icon ion-coffee"></i>
           Café
         </ion-item>
         <ion-item menu-close href="#/app/frios">
-          <i class="icon ion-email"></i>
+          <i class="ion-ios-flower"></i>
           Frios
         </ion-item>
         <ion-item menu-close href="#/app/comida">
@@ -45,6 +41,10 @@
           <i class="icon ion-pricetag"></i>
           Promociones
         </ion-item>                
+        <ion-item menu-close href="#/app/about">
+          <i class="icon ion-information-circled"></i>
+          Sobre Shabbat Coffee
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
