--- a/www/templates/iniciosesion.html
+++ b/www/templates/iniciosesion.html
@@ -1,6 +1,21 @@
-<ion-modal-view>
 	<ion-content scroll="false">
-	  <h1>Login</h1>
-	  asdasdasd
+		<ion-view>
+		    <ion-content scroll="false">
+		        <section class="login-container">
+		            <div class = "col header text-center">
+		               <img src="./img/ionic.png" class = "logo full-image" />
+		            </div>
+		            <br>
+		            <div class = "col button-row text-center">
+		               <img src="./img/facebook-button.png" />
+		            </div>
+		            <div class = "col button-row text-center">
+		               <img src="./img/email-button.png" />
+		            </div>
+		            <div class = "col text-center">
+		                No tienes una cuenta? <strong><a href = "#">Crea una!</a></strong>
+		            </div>            
+		        </section>
+		    </ion-content>
+		</ion-view>
 	</ion-content>
-</ion-modal-view>
