--- a/www/templates/iniciosesion.html
+++ b/www/templates/iniciosesion.html
@@ -1,18 +1,18 @@
 	<ion-content scroll="false">
 		<ion-view>
-		    <ion-content scroll="false">
+		    <ion-content scroll="false" ng-controller="loginController">
 		        <section class="login-container">
 		            <div class = "col header text-center">
 		               <img src="./img/ionic.png" class = "logo full-image" />
 		            </div>
 		            <br>
 		            <div class = "col button-row text-center">
-		               <img src="./img/facebook-button.png" />
+		               <img src="./img/facebook-button.png" ng-click="acceso()"/>
 		            </div>
 		            <div class = "col button-row text-center">
 		               <img src="./img/email-button.png" />
 		            </div>
-		            <div class = "col text-center">
+		            <div class = "col text-center" ng-click="crearCuentaPop()">
 		                No tienes una cuenta? <strong><a href = "#">Crea una!</a></strong>
 		            </div>            
 		        </section>
