--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,15 +1,28 @@
 <ion-modal-view>
   <ion-header-bar>
-    <h1 class="title">Login</h1>
+    <h1 class="title">Registrate</h1>
     <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
+      <button class="button" ng-click="cerrarForm()">Cerrar</button>
     </div>
   </ion-header-bar>
   <ion-content>
-    <form ng-submit="doLogin()">
-      <div class="list">
+    <form ng-submit="enviarForm()">
+        <div class="list">
+          <label class="item item-input item-stacked-label">
+            <span class="input-label">Nombre</span>
+            <input type="text" placeholder="Miguel">
+          </label>
+          <label class="item item-input item-stacked-label">
+            <span class="input-label">Apellido</span>
+            <input type="text" placeholder="Ivanovich">
+          </label>
+          <label class="item item-input item-stacked-label">
+            <span class="input-label">Email</span>
+            <input type="text" placeholder="shabbat@mail.com">
+          </label>
+        </div>        
         <label class="item item-input">
-          <span class="input-label">Usurio</span>
+          <span class="input-label">Nombre de usuario</span>
           <input type="text" ng-model="loginData.username">
         </label>
         <label class="item item-input">
@@ -17,7 +30,7 @@
           <input type="password" ng-model="loginData.password">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
+          <button class="button button-block button-positive" type="submit" href="#">Crear nueva cuenta !</button>
         </label>
       </div>
     </form>
