--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -2,7 +2,7 @@
   <ion-header-bar>
     <h1 class="title">Registrate</h1>
     <div class="buttons">
-      <button class="button" ng-click="cerrarForm()">Cerrar</button>
+      <button class="button" ng-click="cerrar(1)">Cerrar</button>
     </div>
   </ion-header-bar>
   <ion-content>
@@ -10,11 +10,11 @@
         <div class="list">
           <label class="item item-input item-stacked-label">
             <span class="input-label">Nombre</span>
-            <input type="text" placeholder="Miguel">
+            <input type="text" placeholder="Damian">
           </label>
           <label class="item item-input item-stacked-label">
             <span class="input-label">Apellido</span>
-            <input type="text" placeholder="Ivanovich">
+            <input type="text" placeholder="Zavala">
           </label>
           <label class="item item-input item-stacked-label">
             <span class="input-label">Email</span>
@@ -30,7 +30,7 @@
           <input type="password" ng-model="loginData.password">
         </label>
         <label class="item">
-          <button class="button button-block button-positive" type="submit" href="#">Crear nueva cuenta !</button>
+          <button class="button button-block button-positive" type="submit" href="#">Crear nueva cuenta</button>
         </label>
       </div>
     </form>
