--- a/www/templates/promociones.html
+++ b/www/templates/promociones.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Galeria de Promociones">
 	<ion-content ng-controller="gallery">
-		<ion-gallery ion-gallery-items="items" ion-gallery-row="2"></ion-gallery>
+		<div class="list card">
+			<ion-gallery ion-gallery-items="items" ion-gallery-row="2"  ion-zoom-events="false"></ion-gallery>
+		</div>
 	</ion-content>
 </ion-view>
