Registro usuarios firebase

--- a/www/templates/authSesion.html
+++ b/www/templates/authSesion.html
@@ -5,9 +5,9 @@
 			<button class="button" ng-click="cerrar(2)">Close</button>
 		</div>
 	</ion-header-bar>
-	<ion-content>
+	<ion-content class="padding">
         <label class="item item-input">
-          <span class="input-label">Nombre de usuario</span>
+          <span class="input-label">Correo electronico</span>
           <input type="text" ng-model="loginData.username">
         </label>
         <label class="item item-input">
