--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,33 +6,22 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <form ng-submit="enviarForm()">
+    <form ng-submit="register()">
         <div class="list">
           <label class="item item-input item-stacked-label">
-            <span class="input-label">Nombre</span>
-            <input type="text" placeholder="Damian">
-          </label>
-          <label class="item item-input item-stacked-label">
-            <span class="input-label">Apellido</span>
-            <input type="text" placeholder="Zavala">
-          </label>
-          <label class="item item-input item-stacked-label">
             <span class="input-label">Email</span>
-            <input type="text" placeholder="shabbat@mail.com">
+            <input type="email" placeholder="shabbat@mail.com" ng-model="user.email">
           </label>
+          <label class="item item-input item-stacked-label">
+            <span class="input-label">Password</span>
+            <input type="password" placeholder="Contraseña" ng-model="user.password">
+          </label>          
         </div>        
-        <label class="item item-input">
-          <span class="input-label">Nombre de usuario</span>
-          <input type="text" ng-model="loginData.username">
-        </label>
-        <label class="item item-input">
-          <span class="input-label">Contraseña</span>
-          <input type="password" ng-model="loginData.password">
-        </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit" href="#">Crear nueva cuenta</button>
         </label>
       </div>
+      <div ng-show="mostrar_error">{{mostrar_error}}</div>
     </form>
   </ion-content>
 </ion-modal-view>
