--- a/www/templates/iniciosesion.html
+++ b/www/templates/iniciosesion.html
@@ -16,6 +16,8 @@
 		                No tienes una cuenta? <strong><a href="#" ng-click="seleccion(1)">Crea una!</a></strong>
 		                <br>
 		                Ya tienes una ? <strong><a href="#" ng-click="seleccion(2)">Inicia sesión</a></strong>
+		                <br>
+		                olvide mi contraseña :(
 		            </div>            
 		        </section>
 		    </ion-content>
