Agregando metodos de firebase

--- a/www/templates/iniciosesion.html
+++ b/www/templates/iniciosesion.html
@@ -10,14 +10,12 @@
 		               <img src="./img/facebook-button.png"/>
 		            </div>
 		            <div class = "col button-row text-center">
-		               <img src="./img/email-button.png" />
+		               <img src="./img/email-button.png" ng-click="seleccion(2)" />
 		            </div>
 		            <div class = "col text-center">
 		                No tienes una cuenta? <strong><a href="#" ng-click="seleccion(1)">Crea una!</a></strong>
 		                <br>
-		                Ya tienes una ? <strong><a href="#" ng-click="seleccion(2)">Inicia sesión</a></strong>
-		                <br>
-		                olvide mi contraseña :(
+		                Olvide mi contraseña <strong><a href="#" ng-click="seleccion(3)">Restablecer</a></strong>
 		            </div>            
 		        </section>
 		    </ion-content>
