--- a/www/templates/iniciosesion.html
+++ b/www/templates/iniciosesion.html
@@ -10,7 +10,7 @@
 		               <img src="./img/facebook-button.png"/>
 		            </div>
 		            <div class = "col button-row text-center">
-		               <img src="./img/email-button.png" ng-click="seleccion(2)" />
+		               <img src="./img/email-button.png" type="submit" ng-click="seleccion(2)" />
 		            </div>
 		            <div class = "col text-center">
 		                No tienes una cuenta? <strong><a href="#" ng-click="seleccion(1)">Crea una!</a></strong>
