--- a/www/templates/restablecer.html
+++ b/www/templates/restablecer.html
@@ -2,7 +2,7 @@
   <ion-header-bar>
     <h1 class="title">Restablecer contraseña</h1>
     <div class="buttons">
-      <button class="button" ng-click="cerrar(3)">Cerrar</button>
+      <button class="button button-assertive" ng-click="cerrar(3)">Cerrar</button>
     </div>
   </ion-header-bar>
   <ion-content ng-controller="AuthCtrl">
@@ -15,7 +15,7 @@
             </label>        
           </div>        
           <label class="item">
-            <button class="button button-block button-assertive" type="submit" href="#">Reset Password</button>
+            <button class="button button-block button-balanced" href="#">Reset Password</button>
           </label>
         </div>
       </div>      
