--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -2,7 +2,7 @@
   <ion-header-bar>
     <h1 class="title">Registrate</h1>
     <div class="buttons">
-      <button class="button" ng-click="cerrar(1)">Cerrar</button>
+      <button class="button button-assertive" ng-click="cerrar(1)">Cerrar</button>
     </div>
   </ion-header-bar>
   <ion-content ng-controller="AuthCtrl">
