--- a/www/templates/principal.html
+++ b/www/templates/principal.html
@@ -12,7 +12,7 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
+  <ion-side-menu side="left" ng-controller="AuthCtrl">
     <ion-header-bar class="bar-stable">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
@@ -42,6 +42,10 @@
           <i class="icon ion-information-circled"></i>
           Sobre Shabbat Coffee
         </ion-item>
+        <ion-item menu-close ng-click="logOut()">
+          <i class="ion-android-exit"></i>
+          Cerrar Sesión
+        </ion-item>        
       </ion-list>
     </ion-content>
   </ion-side-menu>
