--- a/www/css/style.css
+++ b/www/css/style.css
@@ -67,6 +67,46 @@
   color: white;  /*Text color for each item, overrides the color property above*/
 }
 
+.video{
+  position:relative;
+}
+
+.video .logo{
+  position:absolute;
+  left: 50%;
+  width: 180px;
+  margin-left: -90px;
+}
+
+.video .contenido{
+  position:absolute;
+  top: 300px;
+  left: 0px;
+  width: 100%;
+  z-index: 2;
+  text-align: center;
+  color: white;
+  font-size: 2em;
+}
+
+.video video{
+position: fixed;
+top: 50%;
+left: 50%;
+min-width: 100%;
+min-height: 100%;
+width: auto;
+height: auto;
+z-index: -100;
+-webkit-transform: translateX(-50%) translateY(-50%);
+-moz-transform: translateX(-50%) translateY(-50%);
+-ms-transform: translateX(-50%) translateY(-50%);
+-o-transform: translateX(-50%) translateY(-50%);
+transform: translateX(-50%) translateY(-50%);
+background-size: cover;
+}
+
+/*
 .login-container {
     display: -webkit-flex;
     -webkit-flex-direction: column;
@@ -83,7 +123,7 @@
     -webkit-flex: 4;
     padding-top: 20px;
 }
-
+*/
 /*.my-container {
     background-image:  url("http://www.planwallpaper.com/static/images/colorful-triangles-background_yB0qTG6.jpg");
     background-repeat: repeat;
