--- a/www/css/style.css
+++ b/www/css/style.css
@@ -75,6 +75,7 @@
   position:absolute;
   left: 50%;
   width: 180px;
+  top: 80px;
   margin-left: -90px;
 }
 
@@ -87,6 +88,10 @@
   text-align: center;
   color: white;
   font-size: 2em;
+}
+
+.contenido p{
+  font-size: 1em;
 }
 
 .video video{
