Agregando datos a las vistas

--- a/www/templates/cafe.html
+++ b/www/templates/cafe.html
@@ -17,36 +17,10 @@
             </p>
         </div>
       </div>
-
-      <div class="list card">
-        <div class="item item-divider">
-          <span>Cafe 3 </span>
-          <p>Cafeinomano</p>
-        </div>   
-        <div class="item item-body">
-          <img class="full-image" src="img/coffee.jpg">
-            <p>
-              This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
-              the content is from a card-body consisting of an image and paragraph text. The footer
-              consists of tabs, icons aligned left, within the card-footer.
-            </p>
-        </div>
-      </div>
-
-      <div class="list card">
-        <div class="item item-divider">
-          <span>Cafe 4 </span>
-          <p>Cafeinomano</p>
-        </div>   
-        <div class="item item-body">
-          <img class="full-image" src="img/coffee.jpg">
-            <p>
-              This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
-              the content is from a card-body consisting of an image and paragraph text. The footer
-              consists of tabs, icons aligned left, within the card-footer.
-            </p>
-        </div>    
-      </div>
+      <button class="button button-positive"> 
+      <i class="ion-android-add-circle"></i>
+      Precio: 5 PESOS
+      </button>      
     </div>  
   </ion-content>
 </ion-view>
