--- a/www/templates/principal.html
+++ b/www/templates/principal.html
@@ -37,7 +37,11 @@
         <ion-item menu-close href="#/app/promociones">
           <i class="icon ion-pricetag"></i>
           Promociones
-        </ion-item>                
+        </ion-item>
+        <ion-item menu-close href="#/app/carrito">
+          <i class="ion-ios-cart"></i>
+          Carrito
+        </ion-item>                        
         <ion-item menu-close href="#/app/about">
           <i class="icon ion-information-circled"></i>
           Sobre Shabbat Coffee
