--- a/www/templates/principal.html
+++ b/www/templates/principal.html
@@ -16,7 +16,7 @@
     <ion-header-bar class="bar-stable">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
-    <ion-content class="custom">
+    <ion-content class="custom" ng-controller="AuthCtrl">
       <ion-list>
         <ion-item menu-close href="#/app/cafe">
           <i class="icon ion-coffee"></i>
@@ -46,6 +46,10 @@
           <i class="icon ion-information-circled"></i>
           Sobre Shabbat Coffee
         </ion-item>
+        <ion-item menu-close ng-click="cerrarSesion()">
+          <i class="ion-android-exit"></i>
+          Cerrar Sesión
+        </ion-item>        
       </ion-list>
     </ion-content>
   </ion-side-menu>
