--- a/www/templates/cafe.html
+++ b/www/templates/cafe.html
@@ -1,26 +1,25 @@
 <ion-view view-title="Cafés">
   <ion-content>
-
-    <div class="list card">
-      <div class="list card">
-
-        <div class="item item-divider">
-          <span>Cafe 2 </span>
-          <p>Cafeinomano</p>
-        </div> 
-        <div class="item item-body">
-          <img class="full-image" src="img/coffee.jpg">
-            <p>
-              This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
-              the content is from a card-body consisting of an image and paragraph text. The footer
-              consists of tabs, icons aligned left, within the card-footer.
-            </p>
+    <div ng-controller = "DataCtrl">
+      <div ng-repeat="items in cafeData" class="list card">
+        <div class="list card">
+        
+          <div class="item item-divider">
+            <span>{{items.Nombre}}</span>
+            <p>{{items.Categoria}}</p>
+          </div> 
+          <div class="item item-body">
+            <img class="full-image" ng-src="{{items.Img}}">
+              <p>
+                {{items.Descripcion}}
+              </p>
+          </div>
         </div>
+        <button class="button button-positive"> 
+        <i class="ion-android-add-circle"></i>
+        {{items.Precio}}
+        </button>      
       </div>
-      <button class="button button-positive"> 
-      <i class="ion-android-add-circle"></i>
-      Precio: 5 PESOS
-      </button>      
     </div>  
   </ion-content>
 </ion-view>
