--- a/www/templates/cafe.html
+++ b/www/templates/cafe.html
@@ -15,10 +15,11 @@
               </p>
           </div>
         </div>
-        <button class="button button-positive"> 
+        <input type="text" ng-model="items.Cantidad">
+        <button class="button button-positive" ng-click="addProducto(items)"> 
         <i class="ion-android-add-circle"></i>
-        {{items.Precio}}
-        </button>      
+        $ {{items.Precio}}
+        </button>  
       </div>
     </div>  
   </ion-content>
