--- a/www/templates/frios.html
+++ b/www/templates/frios.html
@@ -15,7 +15,7 @@
               </p>
           </div>
         </div>
-        <button class="button button-positive"> 
+        <button class="button button-positive" ng-click="addProducto(items.Precio,items.Nombre)"> 
         <i class="ion-android-add-circle"></i>
         {{items.Precio}}
         </button>      
